Fixes spacing issue when drawInput() is displaying longer inputs. Fixes the positioning of question feedback.

--- a/FSM Prototype/fsm.css
+++ b/FSM Prototype/fsm.css
@@ -118,8 +118,8 @@ text.nodename {
 }
 
 .feedback {
-  display: inline;
-  margin-left: 3px;
+  display: table-cell;
+  margin-left: 7px;
 }
 
 .control-rect {
